Enhance AuthService; add JWT validation in user ownership check and handle InvalidJwtException. Introduce comprehensive tests for ownership validation scenarios in AuthServiceTest. Refactor ReservationService to include ID validation and improve exception handling. Add tests for reservation service methods in ReservationServiceTest.