@@ -15,8 +15,10 @@ import com.github.alefthallys.roombooking.repositories.RoomRepository;
 import com.github.alefthallys.roombooking.repositories.UserRepository;
 import com.github.alefthallys.roombooking.security.jwt.JwtTokenProvider;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ReservationService {
@@ -35,17 +37,29 @@ public class ReservationService {
 		this.userRepository = userRepository;
 	}
 	
+	private static void validateIdOrThrowException(Long id) {
+		if (id == null || id <= 0) {
+			throw new IllegalArgumentException("Invalid user ID: " + id);
+		}
+	}
+	
+	@Transactional(readOnly = true)
 	public List<ReservationResponseDTO> findAll() {
-		return reservationRepository.findAll().stream()
+		return reservationRepository.findAll()
+				.stream()
 				.map(ReservationMapper::toDto)
-				.toList();
+				.collect(Collectors.toList());
 	}
 	
+	@Transactional(readOnly = true)
 	public ReservationResponseDTO findById(Long id) {
-		Reservation reservationById = reservationRepository.findById(id).orElseThrow(() -> new EntityReservationNotFoundException(id));
-		return ReservationMapper.toDto(reservationById);
+		validateIdOrThrowException(id);
+		return reservationRepository.findById(id)
+				.map(ReservationMapper::toDto)
+				.orElseThrow(() -> new EntityReservationNotFoundException(id));
 	}
 	
+	@Transactional
 	public ReservationResponseDTO create(ReservationRequestDTO reservationDTO) {
 		if (!roomRepository.existsById(reservationDTO.roomId())) {
 			throw new EntityRoomNotFoundException(reservationDTO.roomId());
@@ -67,7 +81,10 @@ public class ReservationService {
 		return ReservationMapper.toDto(reservationRepository.save(reservationToSave));
 	}
 	
+	@Transactional
 	public ReservationResponseDTO update(Long id, ReservationUpdateRequestDTO reservationDTO) {
+		validateIdOrThrowException(id);
+		
 		Reservation reservationById = reservationRepository.findById(id).orElseThrow(
 				() -> new EntityReservationNotFoundException(id));
 		
@@ -85,7 +102,10 @@ public class ReservationService {
 		return ReservationMapper.toDto(savedReservation);
 	}
 	
+	@Transactional
 	public void delete(Long id) {
+		validateIdOrThrowException(id);
+		
 		Reservation reservationById = reservationRepository.findById(id).orElseThrow(
 				() -> new EntityReservationNotFoundException(id));
 		
